# TAIM

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/src/taim/: __init__.py  errors.py  main.py  settings.py
backend/src/taim/api/: agents.py  chat.py  deps.py  health.py  rules.py  setup.py  skills.py  stats.py  tasks.py  tools.py
backend/src/taim/brain/: agent_registry.py  agent_run_store.py  agent_state_machine.py  context_assembler.py  database.py  feedback.py  few_shot_store.py  hot_memory.py  iteration_controller.py  knowledge.py  learning_loop.py  learning_store.py  logging.py  memory.py  pattern_extractor.py  prompts.py  rule_engine.py  session_store.py  skill_registry.py  summarizer.py  vault.py
backend/src/taim/cli/: agent.py  main.py  server.py  stats.py  vault.py
backend/src/taim/conversation/: __init__.py  classifier.py  defaults.py  handlers.py  interpreter.py  onboarding.py  understander.py
backend/src/taim/models/: agent.py  chat.py  config.py  feedback.py  memory.py  orchestration.py  router.py  rule.py  skill.py  tool.py
backend/src/taim/orchestrator/: __init__.py  heartbeat.py  mcp_client.py  orchestrator.py  swat_builder.py  task_manager.py  team_composer.py  tool_registry.py  tool_sandbox.py  tools.py
backend/src/taim/router/: __init__.py  failover.py  router.py  tiering.py  tracking.py  transport.py
backend/taim-vault/config/: defaults.yaml  providers.yaml  taim.yaml
backend/taim-vault/system/state/: taim.db-shm  taim.db-wal
backend/taim-vault/users/default/: INDEX.md
docs/: PRD-PHASE1.md  TAIM-PROJECT-v2.md
(+151 files in other folders)
