[project]
name = "taim"
version = "0.1.0"
description = "TAIM — Team AI Manager. AI team orchestration through natural language."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Reyk Zepper" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "aiofiles>=24.1.0",
    "websockets>=13.0",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "structlog>=24.1.0",
    "python-frontmatter>=1.1.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[project.scripts]
taim = "taim.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taim"]

[tool.pytest.ini_options]
testpaths = ["../tests/backend"]
asyncio_mode = "auto"
pythonpath = ["../tests/backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
